--- a/css/customize.css
+++ b/css/customize.css
@@ -1,15 +1,31 @@
 #nyc {
-	background-color:  
+	background-color:  #FF5A00;
+	width:  25%;
+	height: 50%;
+	position: relative;
+	display: inline-block;
 }
 
 #london {
-
+	background-color:  #0DFFB3;
+	width:  25%;
+	height: 25%;
+	position: relative;
+	display: block;
 }
 
 #tokyo {
-
+	background-color:  #14CC5E;
+	width:  25%;
+	height: 25%;
+	position: relative;
+	display: block;
 }
 
 #sydney {
-
+	background-color:  #CC8714;
+	width:  25%;
+	height: 25%;
+	position: relative;
+	display: block;
 }
