--- a/css/customize.css
+++ b/css/customize.css
@@ -1,31 +1,32 @@
+section {
+	position: relative;
+	top: 250px;
+}
+
 #nyc {
 	background-color:  #FF5A00;
 	width:  25%;
 	height: 50%;
-	position: relative;
-	display: inline-block;
+	margin: 0 auto;
 }
 
 #london {
 	background-color:  #0DFFB3;
 	width:  25%;
 	height: 25%;
-	position: relative;
-	display: block;
+	margin: 0 auto;
 }
 
 #tokyo {
 	background-color:  #14CC5E;
 	width:  25%;
 	height: 25%;
-	position: relative;
-	display: block;
+	margin: 0 auto;
 }
 
 #sydney {
 	background-color:  #CC8714;
 	width:  25%;
 	height: 25%;
-	position: relative;
-	display: block;
+	margin: 0 auto;
 }
